# Joomla_MCP_Server

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
src/config/: logging_config.py
src/routes/: chat_router.py  mcp.py  views.py
src/services/: joomla_service.py  llm_service.py  tags_service.py
src/services/joomla_API/: articles_service.py  categories_service.py  joomla_service.py  languages_service.py  menus_service.py  messages_service.py  modules_service.py  newsfeeds_service.py  redirects_service.py  tags_service.py  templates_service.py  users_service.py
src/tools/: OLDarticles.py  article_tools.py  articles.py  category_tool.py  language_tool.py  mcp_server.py  mcp_tools.py  menu_tool.py  menu_tools.py  message_tool.py  module_tool.py  newsfeed_tool.py  redirect_tool.py  redirect_tools.py  tag_tools.py  template_tool.py  user_tool.py  user_tools.py
src/utils/: config.py  formatters.py
static/: chat.js  style.css
templates/: index.html
