[project]
name = "joomla-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.133.1",
    "fastmcp>=3.1.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "openai>=1.0.0",
    "passlib>=1.7.4",
    "pydantic>=2.12.5",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "uvicorn>=0.41.0",
]
